--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -13,7 +13,7 @@
           <ion-item *ngFor="let u of usuariosFiltrados">
             <ion-thumbnail slot="start">
             <ion-avatar >
-                <img src="{{u.img_url}}" onError="src = 'https://tse4.mm.bing.net/th?id=OIP.a7Zys9Q4iyh7nBNJDLsLIgHaDV&pid=Api'">
+                <img src="{{u.img_url}}" onError="this.className='ion-hide'">
                 <ion-icon
                 style="font-size: '64px'"
                 name="person-circle-outline"
