--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,30 +1,30 @@
 <!-- <ion-header> -->
-  <ion-toolbar color="dark">
-    <ion-buttons slot="secondary" *ngIf="auth.loggedIn(); else login">
-        <ion-button (click)="mostrarNotificaciones($event)">
-          <ion-icon slot="icon-only" name="notifications-outline"></ion-icon>
-        </ion-button>
-        <ion-button (click)="mostrarPerfil($event)">
-          <!-- [routerLink]="['/perfil']"> -->
-          <ion-icon slot="icon-only" name="person-circle"></ion-icon>
-        </ion-button>
-    </ion-buttons>
-    
-    <ng-template #login>
-      <ion-button [routerLink]="['/login']"> Login </ion-button>
-    </ng-template>
+<ion-toolbar color="dark">
+  <ion-buttons slot="secondary" *ngIf="auth.loggedIn(); else login">
+    <ion-button (click)="mostrarNotificaciones($event)">
+      <ion-icon slot="icon-only" name="notifications-outline"></ion-icon>
+    </ion-button>
+    <ion-button (click)="mostrarPerfil($event)"> <!-- [routerLink]="['/perfil']"> -->
+      <ion-icon slot="icon-only" name="person-circle"></ion-icon>
+    </ion-button>
+  </ion-buttons>
 
-    <ion-buttons slot="start" class="ion-hide-md-up">
-      <ion-menu-button (click)="openMenu()" autoHide="false"></ion-menu-button>
-    </ion-buttons>
-    <ion-title slot="start">Icono Page</ion-title>
-    <ion-buttons slot="start" class="ion-hide-md-down">
-      <!-- up para PC -->
-      <ion-button [routerLink]="['/']"> Home </ion-button>
-      <ion-button> Reglamento </ion-button>
-      <ion-button [routerLink]="['/concursos']"> Concursos </ion-button>
-      <ion-button> Galería </ion-button>
-      <ion-button [routerLink]="['/usuarios']" *ngIf="auth.loggedIn()"> Usuarios </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
+  <ng-template #login>
+    <ion-button slot="end" [routerLink]="['/login']"> Login </ion-button>
+  </ng-template>
+
+  <ion-buttons slot="start" class="ion-hide-md-up">
+    <ion-menu-button (click)="openMenu()" autoHide="false"></ion-menu-button>
+  </ion-buttons>
+  <ion-title slot="start">Icono Page</ion-title>
+  <ion-buttons slot="start" class="ion-hide-md-down"> <!-- up para PC -->
+    <ion-button [routerLink]="['/']"> Home </ion-button>
+    <ion-button> Reglamento </ion-button>
+    <ion-button [routerLink]="['/concursos']"> Concursos </ion-button>
+    <ion-button> Galería </ion-button>
+    <ion-button [routerLink]="['/usuarios']" *ngIf="auth.loggedIn()">
+      Usuarios
+    </ion-button>
+  </ion-buttons>
+</ion-toolbar>
 <!-- </ion-header> -->
