--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -40,14 +40,14 @@
                   </ng-template>
                 </ion-avatar>
               </ion-row>
-              <ion-row class="ion-justify-content-center">
+              <ion-col class="ion-justify-content-center">
                 <ion-card-title class="ion-text-center"
                   >{{usuario.username}}</ion-card-title
                 >
                 <ion-card-subtitle class="ion-text-center"
                   >{{usuario.email}}</ion-card-subtitle
                 >
-              </ion-row>
+              </ion-col>
             </ion-col>
           </ion-item>
         </ion-row>
