--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,7 +8,7 @@
         <ion-row>
           <ion-col size-xs="12" size-md="8" offset-md="2" size-lg="4" offset-lg="4">
 
-            <div class="logo"><img  src="assets/imgs/logo.png" /></div>
+            <div class="logo"><ion-img  src="assets/imgs/logo.png" /></ion-img></div>
           
           </ion-col>
         </ion-row> 
