--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -21,19 +21,7 @@
       <ion-col size="12" size-md="10">
         <form #f="ngForm" (ngSubmit)="postUsuario(f)">
           <ion-row class="ion-justify-content-center">
-            <ion-avatar>
-              <img src="{{usuario.img_url}}" onError="this.className='ion-hide'">
-              <ion-icon
-              style="font-size: '64px'"
-              name="person-circle-outline"
-            ></ion-icon>
-              <ng-template #icon>
-                <ion-icon
-                  style="font-size: '64px'"
-                  name="person-circle-outline"
-                ></ion-icon>
-              </ng-template>
-            </ion-avatar>
+            <app-usuario-img [src]="usuario.img_url"></app-usuario-img>
           </ion-row>
           <ion-item>
             <ion-label>Nombre</ion-label>
