--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -12,22 +12,16 @@
         <ion-list>
           <ion-item *ngFor="let u of usuariosFiltrados">
             <ion-thumbnail slot="start">
-            <ion-avatar >
-                <img src="{{u.img_url}}" onError="this.className='ion-hide'">
-                <ion-icon
-                style="font-size: '64px'"
-                name="person-circle-outline"
-              ></ion-icon>
-            </ion-avatar>
-          </ion-thumbnail>
+              <app-usuario-img [src]="u.img_url"></app-usuario-img>
+            </ion-thumbnail>
             <ion-label>
-                  <ion-card-subtitle>{{u.username}}</ion-card-subtitle>
-                  <ion-card-title>Mark Otto</ion-card-title>
-                  <ion-card-subtitle>DNI 11.111.111</ion-card-subtitle>
-                  <!-- <ion-row class="ion-hide-md-up">
-                    <ion-text>mark.otto@gmail.com</ion-text>
-                    <ion-text>Los Tulipanes</ion-text>
-                  </ion-row> -->
+                <ion-card-subtitle>{{u.username}}</ion-card-subtitle>
+                <ion-card-title>Mark Otto</ion-card-title>
+                <ion-card-subtitle>DNI 11.111.111</ion-card-subtitle>
+                <!-- <ion-row class="ion-hide-md-up">
+                  <ion-text>mark.otto@gmail.com</ion-text>
+                  <ion-text>Los Tulipanes</ion-text>
+                </ion-row> -->
             </ion-label>
               <ion-col class="ion-hide-md-down">
                 <ion-text>{{ u.email }}</ion-text>
@@ -36,21 +30,17 @@
                 <ion-text>Los Tulipanes</ion-text>
               </ion-col>
               <ion-buttons class="ion-hide-md-down">
-                <ion-button
-                  [routerLink]="['editar/' + u.id]"
-                >
+                <ion-button [routerLink]="['editar/' + u.id]">
                   <ion-icon name="create"></ion-icon>
                 </ion-button>
-                <ion-button
-                  (click)="deleteUsuario(u.id)"
-                >
+                <ion-button (click)="deleteUsuario(u.id)">
                   <ion-icon name="trash"></ion-icon>
                 </ion-button>
               </ion-buttons>
-                <ion-buttons class="ion-hide-md-up">
-                <ion-button>
+              <ion-buttons class="ion-hide-md-up">
+                <ion-button (click)="mostrarAcciones($event, u.id)">
                   <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
-              </ion-button>
+                </ion-button>
               </ion-buttons>
           </ion-item>
 
