enlace app de mail

--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.scss
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.scss
@@ -20,3 +20,9 @@ ion-grid.tabla  {
       border-bottom: 1px solid black;
     }
 }
+
+
+app-usuario-img {
+  width: auto !important;
+  height: auto !important;
+}
