--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -23,21 +23,34 @@
             <ion-grid>
               <ion-row size="12">
                 <ion-col size="10" size-md="6">
-                  <app-usuario-img
-                    class="ion-float-left ion-margin-end"
-                    [src]="u.img_url"
-                  ></app-usuario-img>
-                  <ion-label class="ion-float-left">
-                    <ion-card-subtitle>{{u.username}}</ion-card-subtitle>
-                    <ion-card-title>Leonardo Martinez Martinez</ion-card-title>
-                    <ion-card-subtitle>DNI 11.111.111</ion-card-subtitle>
-                  </ion-label>
+                  <!-- ion-hide-md-down -->
+                  <ion-item class="ion-no-padding">
+                    <app-usuario-img
+                      class="ion-float-left ion-margin-end"
+                      [src]="u.img_url"
+                    ></app-usuario-img>
+
+                    <ion-label class="ion-float-left">
+                      <ion-card-subtitle>{{u.username}}</ion-card-subtitle>
+                      <ion-text><b>Leonardo Martinez Martinez</b></ion-text>
+                      <ion-card-subtitle>DNI 11.111.111</ion-card-subtitle>
+                    </ion-label>
+                    <ion-buttons class="ion-hide-md-up">
+                      <ion-button>
+                        <ion-icon
+                          slot="icon-only"
+                          ios="ellipsis-horizontal"
+                          md="ellipsis-vertical"
+                        ></ion-icon>
+                      </ion-button>
+                    </ion-buttons>
+                  </ion-item>
                 </ion-col>
                 <ion-col
                   size="2"
                   class="ion-hide-md-down ion-align-self-center"
                 >
-                  <ion-text>{{ u.email }}</ion-text>
+                <a [href]="'mailto:'+u.email"> {{ u.email }} </a>
                 </ion-col>
                 <ion-col
                   size="2"
@@ -45,22 +58,13 @@
                 >
                   <ion-text>Los Tulipanes</ion-text>
                 </ion-col>
-                <ion-col size="2" class="ion-align-self-center">
+                <ion-col size="2" class="ion-align-self-center"> 
                   <ion-buttons class="ion-hide-md-down">
                     <ion-button [routerLink]="['editar/' + u.id]">
                       <ion-icon name="create"></ion-icon>
                     </ion-button>
                     <ion-button (click)="deleteUsuario(u.id)">
                       <ion-icon name="trash"></ion-icon>
-                    </ion-button>
-                  </ion-buttons>
-                  <ion-buttons class="ion-hide-md-up">
-                    <ion-button>
-                      <ion-icon
-                        slot="icon-only"
-                        ios="ellipsis-horizontal"
-                        md="ellipsis-vertical"
-                      ></ion-icon>
                     </ion-button>
                   </ion-buttons>
                 </ion-col>
