--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -21,15 +21,16 @@
       <ion-col size="12" size-md="10">
         <form #f="ngForm" (ngSubmit)="postConcurso(f)">
           <ion-item>
-            <ion-label>Nombre</ion-label>
+            <ion-label position="stacked">Nombre</ion-label>
             <ion-input
-              name="name"
-              [ngModel]="concurso.name"
-              required
-            ></ion-input>
+            name="name"
+            [ngModel]="concurso.name"
+            required
+          ></ion-input>
           </ion-item>
+
           <ion-item>
-            <ion-label>Descripcion</ion-label>
+            <ion-label position="stacked">Descripción</ion-label>
             <ion-textarea
               name="description"
               [ngModel]="concurso.description"
@@ -37,22 +38,22 @@
             ></ion-textarea>
           </ion-item>
           <ion-item>
-            <ion-label>Fecha de inicio</ion-label>
-            <input
-              type="date"
-              name="start_date"
-              [ngModel]="concurso.start_date"
-              required
-            />
+              <ion-label position="stacked">Fecha de inicio</ion-label>
+              <input
+                type="date"
+                name="start_date"
+                [ngModel]="concurso.start_date"
+                required
+              />
           </ion-item>
           <ion-item>
-            <ion-label>Fecha de finalizacion</ion-label>
-            <input
-              type="date"
-              name="end_date"
-              [ngModel]="concurso.end_date"
-              required
-            />
+              <ion-label position="stacked">Fecha de finalizacion</ion-label>
+              <input
+                type="date"
+                name="end_date"
+                [ngModel]="concurso.end_date"
+                required
+              />
           </ion-item>
           <ion-button expand="block" type="submit" [disabled]="!f.valid"
             >Guardar</ion-button
