--- a/src/app/usuario/usuario-edit/usuario-edit.page.html
+++ b/src/app/usuario/usuario-edit/usuario-edit.page.html
@@ -16,7 +16,7 @@
             <app-usuario-img [src]="usuario.img_url"></app-usuario-img>
           </ion-row>
           <ion-item>
-            <ion-label>Nombre</ion-label>
+            <ion-label position="stacked">Nombre</ion-label>
             <ion-input
               name="username"
               [ngModel]="usuario.username"
@@ -24,7 +24,7 @@
             ></ion-input>
           </ion-item>
           <ion-item>
-            <ion-label>Email</ion-label>
+            <ion-label position="stacked">Email</ion-label>
             <ion-textarea
               name="email"
               [ngModel]="usuario.email"
@@ -32,7 +32,7 @@
             ></ion-textarea>
           </ion-item>
           <ion-item>
-            <ion-label>Imagen(url)</ion-label>
+            <ion-label position="stacked">Imagen(url)</ion-label>
             <ion-input
               name="img_url"
               [(ngModel)]="usuario.img_url"
