--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -36,7 +36,7 @@
                       <ion-card-subtitle>DNI 11.111.111</ion-card-subtitle>
                     </ion-label>
                     <ion-buttons class="ion-hide-md-up">
-                      <ion-button>
+                      <ion-button (click)="mostrarAcciones($event, u.id)">
                         <ion-icon
                           slot="icon-only"
                           ios="ellipsis-horizontal"
