--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -30,9 +30,9 @@
 
   <ion-grid>
 
-    <ion-row class="ion-justify-content-end">
+    <ion-row >
       
-      <ion-col size="12" size-md="7">
+      <ion-col size="12" size-md="7" offset="1">
         <ion-searchbar [(ngModel)]="searchQuery"></ion-searchbar>
         <!-- <ion-searchbar (ionChange)="buscarConcursos($event.target.value)"></ion-searchbar> -->
           <ion-list *ngIf="concursosFiltrados.length > 0; else texto">
