se sacó linea extra de lista usuarios

--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -23,8 +23,7 @@
             <ion-grid>
               <ion-row size="12">
                 <ion-col size="10" size-md="6">
-                  <!-- ion-hide-md-down -->
-                  <ion-item class="ion-no-padding">
+                  <ion-item lines="none">
                     <app-usuario-img
                       class="ion-float-left ion-margin-end"
                       [src]="u.img_url"
