--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -33,12 +33,18 @@
     <ion-row >
       
       <ion-col size="12" size-md="7" offset="1">
-        <ion-searchbar [(ngModel)]="searchQuery"></ion-searchbar>
+        <!-- <ion-searchbar [(ngModel)]="searchQuery"></ion-searchbar> -->
         <!-- <ion-searchbar (ionChange)="buscarConcursos($event.target.value)"></ion-searchbar> -->
-          <ion-list *ngIf="concursosFiltrados.length > 0; else texto">
+
+        <app-search-bar 
+          (buscar)="filtrarConcursos($event)"
+          [atributosObj]="atributosBusqueda"
+        ></app-search-bar>
+
+          <ion-list *ngIf="concursos.length > 0; else texto">
             <!-- concurso card -->
             <!-- <ion-card *ngFor="let concurso of concursos"> -->
-            <ion-card *ngFor="let concurso of concursosFiltrados">
+            <ion-card *ngFor="let concurso of concursos">
               <ion-card-header>
                 <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
                 <ion-card-title>{{concurso.name}}</ion-card-title>
@@ -58,7 +64,7 @@
             </ion-card>
           </ion-list>
           <ng-template #texto>
-            <ion-item>No hay concursos</ion-item>
+            <ion-item>No se encontraron concursos</ion-item>
           </ng-template>
       </ion-col>
       <!-- filtro y busqueda -->
