--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,36 +5,36 @@
     <form #f="ngForm" (ngSubmit)="login(f)">
       <ion-grid>
 
-        <ion-row>
-          <ion-col size-xs="12" size-md="8" offset-md="2" size-lg="4" offset-lg="4">
+        <ion-row class="ion-justify-content-center">
+          <ion-col size-xs="12" size-sm="8" size-md="6" size-lg="4">
 
-            <div class="logo"><ion-img  src="assets/imgs/logo.png" /></ion-img></div>
+            <div class="logo"><ion-img  src="assets/imgs/logo.png" ></ion-img></div>
           
           </ion-col>
         </ion-row> 
         
-        <ion-row>
-          <ion-col size-xs="12" size-md="8" offset-md="2" size-lg="4" offset-lg="4">
+        <ion-row class="ion-justify-content-center">
+          <ion-col size-xs="11" size-sm="8" size-md="4"  size-lg="2">
             
             <ion-item >
-              <ion-label>Username</ion-label>
+              <ion-label position="stacked">Username</ion-label>
               <!-- <ion-input tabindex="0" type="mail" placeholder="Correo electrónico" class="text-right" -->
               <ion-input name="username" [ngModel]="username"  required class="text-right"></ion-input>
             </ion-item>
 
-          </ion-col>
-        </ion-row>
+          <!-- </ion-col> -->
+        <!-- </ion-row> -->
 
-        <ion-row>
-          <ion-col size-xs="12" size-md="8" offset-md="2" size-lg="4" offset-lg="4">
+        <!-- <ion-row> -->
+          <!-- <ion-col size-xs="12" size-md="8" offset-md="2" size-lg="4" offset-lg="4"> -->
             
             <ion-item>
-              <ion-label>Contraseña</ion-label>
+              <ion-label position="stacked">Contraseña</ion-label>
               <ion-input tabindex="0" name="password" [ngModel]="password"  required type="password" class="text-right"></ion-input>
             </ion-item>
 
-          </ion-col>
-        </ion-row>
+          <!-- </ion-col> -->
+        <!-- </ion-row> -->
 
         <!-- <ion-row>
           <ion-col size-xs="12" size-md="8" offset-md="2" size-lg="4" offset-lg="4">
@@ -46,28 +46,30 @@
           </ion-col>
         </ion-row> -->
 
-        <ion-row>
+        <!-- <ion-row> -->
 
-          <ion-col size-xs="12" size-md="8" offset-md="2" size-lg="4" offset-lg="4">
+          <!-- <ion-col size-xs="12" size-md="8" offset-md="2" size-lg="4" offset-lg="4"> -->
           
-            <ion-row>
-              <ion-col>
-                <ion-button expand="block" shape="round" fill="outline" 
-                  [disabled]="!f.valid" type="submit">Ingresar</ion-button>
-              </ion-col>
+            <!-- <ion-row> -->
+              <!-- <ion-col> -->
+                <ion-button [disabled]="!f.valid"
+                  expand="block" shape="round" fill="outline" 
+                  class="ion-margin-vertical" type="submit"
+                >Ingresar</ion-button>
+              <!-- </ion-col> -->
       
               <!-- <ion-col>
                 <ion-button color="tertiary" expand="block" shape="round" routerLink="/register">Registrarse</ion-button>
               </ion-col> -->
-            </ion-row>
+            <!-- </ion-row> -->
 
-            <ion-row *ngIf="error != undefined;">
-              <ion-col>
-                <ion-item color="danger">
+            <!-- <ion-row *ngIf="error != undefined;"> -->
+              <!-- <ion-col> -->
+                <ion-item color="danger" *ngIf="error != undefined;">
                   <ion-label>{{error}}</ion-label>
                 </ion-item>
-              </ion-col>
-            </ion-row>
+              <!-- </ion-col> -->
+            <!-- </ion-row> -->
 
           </ion-col>
 
