--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -24,45 +24,38 @@
             <app-usuario-img [src]="usuario.img_url"></app-usuario-img>
           </ion-row>
           <ion-item class="ion-padding-top">
-            <ion-col>
-              <label>Nombre</label>
-              <input
-              class="expand-full"
+            <!-- <ion-col> -->
+              <ion-label position="floating">Nombre</ion-label>
+              <ion-input
                 name="username"
                 [ngModel]="usuario.username"
                 required
-              >
-            </ion-col>
+              ></ion-input>
+            <!-- </ion-col> -->
           </ion-item>
           <ion-item>
-            <ion-col>
-              <ion-row>
-                <label>Email</label>
-              </ion-row>
-              <ion-row>
-                <input
-                class="expand-full"
+            <!-- <ion-col> -->
+              <ion-label position="floating">Email</ion-label>
+              <ion-input
                 name="email"
                 type="email"
                 [ngModel]="usuario.email"
                 required
-              >
-              </ion-row>
-            </ion-col>
+              ></ion-input>
+            <!-- </ion-col> -->
           </ion-item>
           <ion-item>
-            <ion-col>
-              <label>Imagen(url)</label>
-              <input
-              class="expand-full"
+            <!-- <ion-col> -->
+              <ion-label position="floating">Imagen (url)</ion-label>
+              <ion-input
                 name="img_url"
                 [(ngModel)]="usuario.img_url"
                 required
-              >
-            </ion-col>
+              ></ion-input>
+            <!-- </ion-col> -->
           </ion-item>
           <ion-button expand="block" type="submit" [disabled]="!f.valid"
-            >Guardar</ion-button
+          >Guardar</ion-button
           >
         </form>
       </ion-col>
