--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <!-- <ion-header> -->
 <ion-toolbar color="dark">
   <ion-buttons slot="secondary" *ngIf="auth.loggedIn(); else login">
-    <ion-button (click)="mostrarNotificaciones($event)">
+    <!-- <ion-button (click)="mostrarNotificaciones($event)">
       <ion-icon slot="icon-only" name="notifications-outline"></ion-icon>
-    </ion-button>
+    </ion-button> -->
     <ion-button (click)="mostrarPerfil($event)"> <!-- [routerLink]="['/perfil']"> -->
       <ion-icon slot="icon-only" name="person-circle"></ion-icon>
     </ion-button>
@@ -18,10 +18,10 @@
   </ion-buttons>
   <ion-title slot="start">Icono Page</ion-title>
   <ion-buttons slot="start" class="ion-hide-md-down"> <!-- up para PC -->
-    <ion-button [routerLink]="['/']"> Home </ion-button>
-    <ion-button> Reglamento </ion-button>
+    <!-- <ion-button [routerLink]="['/']"> Home </ion-button> -->
+    <!-- <ion-button> Reglamento </ion-button> -->
     <ion-button [routerLink]="['/concursos']"> Concursos </ion-button>
-    <ion-button> Galería </ion-button>
+    <!-- <ion-button> Galería </ion-button> -->
     <ion-button [routerLink]="['/usuarios']" *ngIf="auth.loggedIn()">
       Usuarios
     </ion-button>
