--- a/src/app/nav/sidebar/sidebar.component.html
+++ b/src/app/nav/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<ion-menu type="reveal" side="start" menuId="first" content-id="main-content">
+<ion-menu type="reveal" side="end" menuId="first" content-id="main-content">
   <!-- <ion-header>
     <ion-toolbar color="primary">
       <ion-title>Start Menu</ion-title>
