--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -13,10 +13,15 @@
     <ion-button slot="end" [routerLink]="['/login']"> Login </ion-button>
   </ng-template>
 
-  <ion-buttons slot="start" class="ion-hide-md-up">
+  <ion-buttons slot="end" class="ion-hide-md-up">
     <ion-menu-button (click)="openMenu()" autoHide="false"></ion-menu-button>
   </ion-buttons>
-  <ion-title slot="start">Icono Page</ion-title>
+  <ion-buttons slot="start">
+    <ion-thumbnail >
+    <ion-img src="../../../assets/GFC logo.png"></ion-img>
+    </ion-thumbnail>
+  </ion-buttons>
+  <!-- <ion-title slot="start">Icono Page</ion-title> -->
   <ion-buttons slot="start" class="ion-hide-md-down"> <!-- up para PC -->
     <!-- <ion-button [routerLink]="['/']"> Home </ion-button> -->
     <!-- <ion-button> Reglamento </ion-button> -->
