estilo en concurso detail

--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -17,12 +17,13 @@
     <ion-menu-button (click)="openMenu()" autoHide="false"></ion-menu-button>
   </ion-buttons>
   <ion-buttons slot="start">
-    <ion-thumbnail >
+    <ion-thumbnail>
     <ion-img src="../../../assets/GFC logo.png"></ion-img>
     </ion-thumbnail>
+    <ion-title class="ion-hide-md-down ion-no-padding">Grupo Fotográfico Centro</ion-title>
   </ion-buttons>
   <!-- <ion-title slot="start">Icono Page</ion-title> -->
-  <ion-buttons slot="start" class="ion-hide-md-down"> <!-- up para PC -->
+  <ion-buttons slot="start" class="ion-hide-md-down ion-padding-start"> <!-- up para PC -->
     <!-- <ion-button [routerLink]="['/']"> Home </ion-button> -->
     <!-- <ion-button> Reglamento </ion-button> -->
     <ion-button [routerLink]="['/concursos']"> Concursos </ion-button>
