--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -2,12 +2,12 @@
   <ion-toolbar>
     <ion-grid>
       <ion-row class="ion-justify-content-end">
-        <ion-col size="12" size-md="11">
+        <ion-col size="12">
           <ion-row>
             <ion-buttons>
               <ion-back-button defaultHref="/concursos"></ion-back-button>
             </ion-buttons>
-            <ion-title>Concurso</ion-title>
+            <!-- <ion-title>Concurso</ion-title> -->
           </ion-row>
         </ion-col>
       </ion-row>
@@ -19,7 +19,7 @@
   <ion-grid>
     <ion-row class="ion-justify-content-center">
       <ion-col size="12" size-md="10">
-        <ion-card>
+        <ion-card class="ion-no-margin">
           <ion-card-header>
             <ion-row>
               <ion-col>
@@ -28,10 +28,17 @@
                   >Desde {{fechaInicio}} hasta {{fechaFin}}</ion-card-subtitle
                 >
               </ion-col>
-              <ion-col *ngIf="auth.loggedIn()">
+              <ion-col *ngIf="auth.loggedIn()" class="ion-align-self-end">
                 <!-- <ion-buttons slot="end"> -->
                 <ion-button class="ion-float-right" (click)="deleteConcurso()">
                   <ion-icon name="trash"></ion-icon>
+                </ion-button>
+                <ion-button
+                  class="ion-float-right"
+                  *ngIf="auth.loggedIn()"
+                  [routerLink]="['/concursos/editar/'+concurso.id]"
+                >
+                  <ion-icon name="create"></ion-icon>
                 </ion-button>
                 <!-- </ion-buttons> -->
               </ion-col>
@@ -39,18 +46,88 @@
           </ion-card-header>
           <!-- <ion-img [src]="concurso.thumbnailUrl"></ion-img> -->
           <ion-card-content>
-            <ion-card-title>Descripcion</ion-card-title>
+            <!-- <ion-card-title>Descripcion</ion-card-title> -->
             <ion-text>{{concurso.description}}</ion-text>
           </ion-card-content>
           <!-- <ion-label>{{item}}</ion-label> -->
         </ion-card>
 
-        <ion-button *ngIf="auth.loggedIn()"
-          expand="block"
-          class="ion-margin"
-          [routerLink]="['/concursos/editar/'+concurso.id]"
-          >Editar</ion-button
-        >
+        
+        <!-- <app-search-bar> </app-search-bar> -->
+        <ion-row class="ion-justify-content-start">
+          <ion-title class="ion-margin-top">Fotografías</ion-title>
+          <ion-fab-button >
+            <ion-icon name="add"></ion-icon>
+          </ion-fab-button>
+        </ion-row>
+     
+        <ion-grid >
+          <ion-row class="ion-padding-end"> <!-- class="ion-text-center" -->
+            <ion-col size="6" size-md="3"></ion-col>
+            <ion-col class="ion-hide-md-down ion-text-center" size="4"></ion-col>
+            <ion-col  class="ion-text-center"  size="3" size-md="2">Premio</ion-col>
+            <ion-col class="ion-hide-md-down ion-text-center" size="2">Puntaje</ion-col>
+            <ion-col class="ion-hide-md-up ion-text-center" size="2">Ptje</ion-col>
+            <ion-col size="1"></ion-col>
+          </ion-row>
+        </ion-grid>
+        <ion-list>
+          <ion-item class="ion-no-padding">
+            <ion-grid > <!-- class="ion-text-center" -->
+              <ion-row size="12" >
+                <ion-col size="6" size-md="3" class="ion-align-self-center">
+                  <ion-card-subtitle>TE.2021.9881</ion-card-subtitle>
+                  <!-- <ion-card-title >Prueba de Riendas</ion-card-title> -->
+                  
+                  <ion-text > <b>Prueba de Riendas</b></ion-text>
+                </ion-col>
+                <ion-col  class="ion-hide-md-down ion-text-center ion-align-self-center"  size="4">
+                  <!-- <ion-text>Martin Martinez  Martinez</ion-text> -->
+               <!--    TODO: componente usuario -->
+                  <ion-item lines="none">
+                    <app-usuario-img
+                      class="ion-float-left ion-margin-end"
+                     
+                    ></app-usuario-img>
+
+                    <ion-label class="ion-float-left">
+                      <ion-card-subtitle>username</ion-card-subtitle>
+                      <ion-text><b>Leonardo Martinez Martinez</b></ion-text>
+                      <ion-card-subtitle>DNI 11.111.111</ion-card-subtitle>
+                    </ion-label>
+
+                  </ion-item>
+                </ion-col>
+                <ion-col  class="ion-text-center ion-align-self-center"  size="3" size-md="2">
+                  <ion-text>R</ion-text>
+                </ion-col>
+                <ion-col  class="ion-text-center ion-align-self-center"  size="2">
+                  <ion-text>-</ion-text>
+                </ion-col>
+
+                <ion-col size="1" class="ion-align-self-center">
+                  <ion-buttons class="ion-hide-lg-down">
+                    <ion-button>
+                      <ion-icon name="create"></ion-icon>
+                    </ion-button>
+                    <ion-button>
+                      <ion-icon name="trash"></ion-icon>
+                    </ion-button>
+                  </ion-buttons>
+                  <ion-buttons class="ion-hide-lg-up">
+                    <ion-button>
+                      <ion-icon
+                        slot="icon-only"
+                        ios="ellipsis-horizontal"
+                        md="ellipsis-vertical"
+                      ></ion-icon>
+                    </ion-button>
+                  </ion-buttons>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-item>
+        </ion-list>
       </ion-col>
     </ion-row>
   </ion-grid>
